--- a/app/src/main/res/layout/activity_student_data.xml
+++ b/app/src/main/res/layout/activity_student_data.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:paddingBottom="16dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="16dp"
     tools:context="br.com.ivanzao.appdoaluno.StudentDataActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
