--- a/app/src/main/res/layout/data_card.xml
+++ b/app/src/main/res/layout/data_card.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:layout_marginTop="5dp">
 
     <RelativeLayout
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="280dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -21,20 +21,12 @@
                 android:layout_height="wrap_content"
                 android:padding="16dp"
                 android:text="Análise e Produção de Projetos Bizarros II"
+                android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/expand_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/ic_arrow_down"
-            android:visibility="visible" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
