--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,72 +13,68 @@
     android:paddingTop="16dp"
     tools:context="br.com.ivanzao.appdoaluno.MainActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="300dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="64dp"
+            android:padding="4dp"
+            app:srcCompat="@drawable/faccamp_app_logo_72dpi" />
+
+        <EditText
+            android:id="@+id/ra"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
-            android:orientation="vertical">
+            android:background="@drawable/bkgrd_blue_login_text"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/ic_person_outline_black_400_24dp"
+            android:ems="10"
+            android:hint="RA"
+            android:inputType="number"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="#ffffff" />
 
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                android:padding="4dp"
-                app:srcCompat="@drawable/faccamp_app_logo_72dpi" />
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/bkgrd_blue_login_text"
+            android:drawablePadding="16dp"
+            android:drawableRight="@drawable/ic_lock_black_400_24dp"
+            android:ems="10"
+            android:hint="Senha do Portal"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="#ffffff" />
 
-            <EditText
-                android:id="@+id/ra"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/bkgrd_blue_login_text"
-                android:drawablePadding="16dp"
-                android:drawableRight="@drawable/ic_person_outline_black_400_24dp"
-                android:ems="10"
-                android:hint="RA"
-                android:inputType="number"
-                android:maxLines="1"
-                android:padding="16dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textColorHint="#ffffff" />
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/bkgd_white_login_button"
+            android:clickable="true"
+            android:padding="16dp"
+            android:text="Efetuar Login"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
+            android:visibility="visible" />
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/bkgrd_blue_login_text"
-                android:drawablePadding="16dp"
-                android:drawableRight="@drawable/ic_lock_black_400_24dp"
-                android:ems="10"
-                android:hint="Senha do Portal"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:padding="16dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textColorHint="#ffffff" />
-
-            <Button
-                android:id="@+id/submit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/bkgd_white_login_button"
-                android:clickable="true"
-                android:padding="16dp"
-                android:text="Efetuar Login"
-                android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                android:visibility="visible" />
-
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
